--- a/answer_keys/11.1_t_test_1_samp_HW.html
+++ b/answer_keys/11.1_t_test_1_samp_HW.html
@@ -360,19 +360,10 @@ transformations on the data if required.</h3>
 library(lme4)</code></pre>
 <pre><code>## Loading required package: Matrix</code></pre>
 <pre class="r"><code>data(&quot;sleepstudy&quot;)
-head(sleepstudy)</code></pre>
-<pre><code>##   Reaction Days Subject
-## 1 249.5600    0     308
-## 2 258.7047    1     308
-## 3 250.8006    2     308
-## 4 321.4398    3     308
-## 5 356.8519    4     308
-## 6 414.6901    5     308</code></pre>
-<pre class="r"><code># install.packages(&quot;MASS&quot;)   # required for &quot;galaxies&quot; dataset
+
+# install.packages(&quot;MASS&quot;)   # required for &quot;galaxies&quot; dataset
 library(MASS)
-data(&quot;galaxies&quot;)
-head(galaxies)</code></pre>
-<pre><code>## [1]  9172  9350  9483  9558  9775 10227</code></pre>
+data(&quot;galaxies&quot;)</code></pre>
 </div>
 <div id="question-1" class="section level3">
 <h3><strong>Question 1:</strong></h3>
@@ -556,7 +547,7 @@ result?</li>
 <li>Is the milk fattier or leaner than expected, if there is a
 difference?</li>
 </ul>
-<p>Leaner; p = 0.02, mu = 2.80.</p>
+<p>Leaner; <span class="math inline">\(p = 0.02\)</span>, <span class="math inline">\(mu = 2.80\)</span>.</p>
 </div>
 <div id="question-5" class="section level3">
 <h3><strong>Question 5:</strong></h3>
@@ -600,7 +591,7 @@ result?</li>
 <li>Are the galaxies moving away faster or slower, if there is a
 difference?</li>
 </ul>
-<p>No, they are not. p = 0.69.</p>
+<p>No, they are not. <span class="math inline">\(p = 0.69\)</span>.</p>
 </div>
 
 
