--- a/answer_keys/4_descriptive_key.html
+++ b/answer_keys/4_descriptive_key.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="UNK Bio" />
 
-<meta name="date" content="2025-08-31" />
+<meta name="date" content="2025-09-17" />
 
 <title>4_Descriptive_stats_key</title>
 
@@ -352,7 +352,7 @@ display: none;
 
 <h1 class="title toc-ignore">4_Descriptive_stats_key</h1>
 <h4 class="author">UNK Bio</h4>
-<h4 class="date">2025-08-31</h4>
+<h4 class="date">2025-09-17</h4>
 
 </div>
 
@@ -446,10 +446,10 @@ which I called <code>key_maker</code>.</p>
 <pre class="r"><code>key_maker &lt;- function(x, # specify data
                       roundval){ # specify rounding!
   
-  # calcualte and print mean value
+  # calculate and print mean value
   print(paste0(&quot;Mean: &quot;, round(mean(x),roundval)))
   
-  # calcualte and print median value
+  # calculate and print median value
   print(paste0(&quot;Median: &quot;, round(median(x),roundval)))
   
   # calculate and print range
