--- a/exams/Fall 2025/Exam2.html
+++ b/exams/Fall 2025/Exam2.html
@@ -11,9 +11,9 @@
 
 <meta name="author" content="BIOL 305" />
 
-<meta name="date" content="2025-10-06" />
+<meta name="date" content="2025-10-10" />
 
-<title>Exam 2</title>
+<title>Exam 2: 105 points possible</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -350,9 +350,9 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">Exam 2</h1>
+<h1 class="title toc-ignore">Exam 2: 105 points possible</h1>
 <h4 class="author">BIOL 305</h4>
-<h4 class="date">2025-10-06</h4>
+<h4 class="date">2025-10-10</h4>
 
 </div>
 
@@ -361,6 +361,7 @@ display: none;
 each:</p>
 <ul>
 <li>incorrectly rounded value</li>
+<li>incorrectly rounded test statistic (i.e., <span class="math inline">\(Z\)</span>)</li>
 <li>incorrectly reported <span class="math inline">\(p\)</span>-value</li>
 </ul>
 <div id="libraries-go-here" class="section level1">
@@ -587,10 +588,10 @@ if outliers exist [1 pt]. You will lose 1 pt overall if you do
 <em>not</em> change the histogram and plot titles and axes labels as per
 the previous problems.</h2>
 </div>
-<div id="c-7-pts-if-a-transformation-is-needed-what-transformation-is-required-show-your-work-and-provide-evidence-for-your-transformation-being-the-most-appropriate-transformation." class="section level2">
+<div id="c-7-pts-if-a-transformation-is-needed-what-transformation-is-required-note-that-as-soon-as-you-find-a-transformation-that-works-you-do-not-need-to-do-any-others." class="section level2">
 <h2>C: [7 pts] If a transformation is needed, what transformation is
-required? Show your work, and provide evidence for your transformation
-being the most appropriate transformation.</h2>
+required? Note that as soon as you find a transformation that works, you
+do not need to do any others.</h2>
 <p><strong>NOTE</strong>: Test only the following transformations:</p>
 <ul>
 <li><span class="math inline">\(\sqrt{x}\)</span></li>
