Updating homeworks and keys

--- a/assignments/12_one_way_ANOVA_HW_topost.html
+++ b/assignments/12_one_way_ANOVA_HW_topost.html
@@ -398,7 +398,14 @@ unique and what effects they have.</p>
 <li><p>Are these data normal? How can you tell?</p></li>
 <li><p>Which dosage/dosages are most effective at reducing the
 score?</p></li>
-<li><p>What might the biological implications of this test be?</p></li>
+</ol>
+<pre><code>## # A tibble: 2 × 6
+##   term         df  sumsq meansq statistic   p.value
+##   &lt;chr&gt;     &lt;int&gt;  &lt;dbl&gt;  &lt;dbl&gt;     &lt;dbl&gt;     &lt;dbl&gt;
+## 1 Dose          3 10.9   3.62        339.  2.10e-30
+## 2 Residuals    44  0.470 0.0107       NA  NA</code></pre>
+<ol start="4" style="list-style-type: decimal">
+<li>What might the biological implications of this test be?</li>
 </ol>
 </div>
 <div id="question-2" class="section level3">
